Fix header align

--- a/css/tema.css
+++ b/css/tema.css
@@ -200,7 +200,3 @@ background: #707070;
   display: none;
   }
 }
-
-.margin-right-zero {
-  margin-right: 0 !important;
-}
